# SEUIF97

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMake_note.md  README.md  building_the_library.md  makefile  the_acceleration_methods.md
.github/workflows/: build.yml
demo/: README.md
demo/demo-c/: README.md  demo.c
demo/demo-go/: demo.go
demo/demo-python/: Diagram_H-S.py  README.md
doc/: SEUIF97_Software_Design.md  SEUIF97软件设计.md  Software_Design.md  软件设计.md
mex/: build_mex.m  mex_seuif97.c  mex_seuif97.mexw64
shared_lib/Windows/x64/: libseuif97.lib  seuif97.lib
shared_lib/Windows/x64-msvc/: seuif97.lib
shared_lib/Windows/x86/: libseuif97.lib
shared_lib/Windows/x86-msvc/: seuif97.lib
src/algo/: algorithm.h  polynomial.c  root.c
src/common/: boundaries.c  common.h  constand.h  constant.h  propertry_pair.c  property_id.h  property_pair.c  region.c  seuif97.c  seuif97.h  thermodynamic_process.c  transport.c
src/r1/: region1.h  region1_out.c  region1_pT.c  region1_pT_ext.c  region1_pair.c  region1_pair.ext.c  region1_polys.c
src/r2/: region2.h  region2_coff.h  region2_out.c  region2_pT.c  region2_pT_ext.c  region2_pair.c  region2_pair.ext.c  region2_polys.c
src/r3/: region3.h  region3_Td.c  region3_Td_ext.c  region3_Tv_phps.c  region3_coff.h  region3_hfe.c  region3_out.c  region3_p_hs.c  region3_pair.c  region3_pair.ext.c  region3_polys.c  region3_v_pT.c
src/r4/: region4.h  region4_T_hs.c  region4_hxsx.c  region4_out.c  region4_pair.c  region4_pair_ext.c
src/r5/: region5.h  region5_out.c  region5_pT.c  region5_pT_ext.c  region5_pair.c  region5_pair.ext.c  region5_polys.c
test/: test_hs.c  test_hxsx.c  test_ph.c  test_ps.c  test_pt.c  test_pv.c  test_th.c  test_ts.c  test_tv.c
